--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "cron": "^4.3.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "upstash": "^0.0.1"
