--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "cors": "^2.8.5",
     "cron": "^4.3.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
